--- a/css/stryles.css
+++ b/css/stryles.css
@@ -43,3 +43,10 @@ footer {
 .accordion-button {
     background-color: #d3d3d3;
 }
+.carousel-caption{
+    background-color: rgb(0, 0, 0, 0.5);
+}
+
+.carousel{
+    border: solid #5637DD;
+}
